<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="200dp"
    android:background="@android:color/transparent"
    android:padding="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_corners_black">

        <TextView
            android:id="@+id/textView"
            android:layout_width="256dp"
            android:layout_height="102dp"
            android:fontFamily="@font/anton"
            android:text="@string/reset_data_value"
            android:textAlignment="center"
            android:textColor="@color/invertedBackgroundColor"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.069" />

        <Button
            android:id="@+id/ButtonConfirm"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:background="@drawable/rounded_corners_black"
            android:text="@string/button_confirm"

            android:textColor="@color/invertedBackgroundColor"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.966"
            app:layout_constraintVertical_bias="0.907" />

        <Button
            android:id="@+id/ButtonCancel"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:background="@drawable/rounded_corners_blue"
            android:text="@string/button_cancel"

            android:textColor="@color/invertedBackgroundColor"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.038"
            app:layout_constraintVertical_bias="0.907" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
