<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/dimOverlayDataLeft"
    android:layout_height="match_parent"
    android:background="#CC000000"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <!-- Cutout View -->

    <!-- Instruction Text -->



    <androidx.constraintlayout.widget.ConstraintLayout


















        android:id="@+id/FrameLayoutTop2"
        android:layout_width="396dp"
        android:layout_height="175dp"
        android:background="@drawable/rounded_corners_blue_white_border"
        android:backgroundTintMode="add"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022">


        <TextView
            android:id="@+id/textFeldBisHeuteWert"
            android:layout_width="92dp"
            android:layout_height="152dp"
            android:fontFamily="@font/anton"
            android:text="@string/data_left"
            android:textAlignment="textStart"
            android:textColor="?attr/actionMenuTextColor"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/wertBisHeuteBenutztErlaubt2"
            android:layout_width="150dp"
            android:layout_height="135dp"
            android:fontFamily="@font/anton"
            android:text="10"
            android:textAlignment="textEnd"
            android:textColor="?attr/actionMenuTextColor"
            android:textSize="65sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.715"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textDataPerMonth"
            android:layout_width="49dp"
            android:layout_height="58dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/anton"
            android:text="@string/Gb"
            android:textAlignment="textStart"
            android:textColor="?attr/actionMenuTextColor"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.846" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/instructionText"
        android:layout_width="203dp"
        android:layout_height="211dp"
        android:layout_gravity="center"
        android:fontFamily="@font/anton"
        android:text="@string/dim_overlay_1"
        android:textColor="@color/FontColorForExplaining"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.564" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners_blue"
        android:text="@string/button_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.965" />


</androidx.constraintlayout.widget.ConstraintLayout>
